# Audio_processing

./: .gitmodules  CMakeLists.txt  README.md
include/: WebrtcAEC3.h  audio_processing.h
src/: CMakeLists.txt  audio_processing.cpp  audio_processing.cpp.autosave  main.cpp  webrtc-audioproc.cpp
test/qt/: CMakeLists.txt  main.cpp
test/qt/Client/: CMakeLists.txt  main.cpp
test/qt/Server/: CMakeLists.txt  main.cpp
test/simple/: CMakeLists.txt  main.cpp
